css responsive adjustement summary and log in, the view on IOS devices repaired

--- a/css/summary_mobile.css
+++ b/css/summary_mobile.css
@@ -3,10 +3,17 @@
     0% {
         opacity: 1;
     }
-
+    90% {
+        width: 100%;
+        height: 100vh;
+        opacity: 0;
+    }
     100% {
         opacity: 0;
-        display: none;
+        width: 0;
+        height: 0;
+        display: none !important;
+        z-index: 0;
     }
 
 }
@@ -40,7 +47,7 @@
     }
 
     .summary-content {
-        padding-left: 0rem !important;
+        padding-right: 2.8rem !important;
         margin-left: 0rem !important;
         width: 100% !important;
         padding-left: 2.8rem !important;
@@ -74,8 +81,14 @@
    
 }
 
-@media(max-width: 390px){
+@media(max-width: 470px){
     html{
-        font-size: 0.375em;
+        font-size: 0.400rem;
+    }
+}
+
+@media(max-width: 375px) {
+    html{
+        font-size: 0.330rem;
     }
 }
